fixed the main article issue oh big height on mobile sizes

--- a/src/assets/css/esthy-plume-editor-style.css
+++ b/src/assets/css/esthy-plume-editor-style.css
@@ -13,3 +13,9 @@
 .ck-content {
   height: 100%;
 } */
+
+@media (max-width: 768px) {
+  .editor-main-area {
+    padding: 0 10px !important;
+  }
+}
